--- a/back-Fluxi/Properties/launchSettings.json
+++ b/back-Fluxi/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:2805",
-      "sslPort": 44302
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "api/test",
-      "applicationUrl": "https://localhost:7008;http://localhost:5008",
+      "applicationUrl": "http://localhost:5008",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
