--- a/FluxiAdmin/FluxiAdmin.csproj
+++ b/FluxiAdmin/FluxiAdmin.csproj
@@ -7,4 +7,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\back-Fluxi\back-Fluxi.csproj" />
+  </ItemGroup>
+
 </Project>
